// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-0 {
  color: pink;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-3:first-of-type {
  margin-top: 0;
}

.emotion-3:last-of-type {
  margin-bottom: 0;
}

.emotion-3:empty {
  display: none;
}

.emotion-0 {
  color: #D01E29;
  margin-left: 0.25rem;
}

.emotion-1 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #D01E29;
  margin-top: 0.25rem;
  line-height: 20px;
}

<div>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-2"
      >
        <label
          class="emotion-1"
          for="test"
        >
          Label
          <span
            class="emotion-0"
            title="Required field"
          >
            *
          </span>
        </label>
        Test
      </div>
    </div>
    <div
      class="emotion-3"
    >
      <div
        class="emotion-4"
        role="alert"
      >
        Error
      </div>
    </div>
  </div>
</div>
`;
